--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
           </b>
         </h2>
         <span style="text-align:right;">
-          <i class="icon fa fa-github-square" style="color:black;"
-            onclick="window.location.href='https://github.com/caleb-sudo';"></i>
+          <i class="icon fa fa-github-square" style="color:black;" onclick="window.location.href='https://github.com/caleb-sudo';"></i>
           <i class="icon fa fa-youtube-play" style="color:red;"></i>
           <i class="icon fa fa-twitter" style="color:aqua;"></i>
           <i class="icon fa fa-facebook-square" style="color:blue;"></i>
