--- a/HUTS.html
+++ b/HUTS.html
@@ -47,7 +47,7 @@
     </div>
   </nav>
   <article>
-    <section>
+    <section class="booksSect">
       <hr>
       <br>
       <div class="row">
