--- a/HUTS.html
+++ b/HUTS.html
@@ -88,7 +88,9 @@
               </b>
             </button>
             <button class="checkOutBtn" onclick="checkOutClicked();">
-
+              <b>
+                Buy Now
+              </b>
             </button>
           </div>
         </div>
