--- a/HUTS.html
+++ b/HUTS.html
@@ -47,7 +47,7 @@
     </div>
   </nav>
   <article>
-    <section class="booksSect">
+    <section>
       <div class="row">
         <div class="column">
           <img src="resources/book13(1).jpg" width="auto" height="400px" onclick="inlarge(this);">
