--- a/QS.html
+++ b/QS.html
@@ -44,28 +44,29 @@
       Cart
     </div>
   </nav>
-    <hr>
-    <br>
-    <div class="pictures" onclick="Increase();">
-      <table>
-        <tr>
-          <th>
-            <img src="resources/book1(1).jpg" id="pict1" width="auto" height="700px">
-          </th>
-        </tr>
-        <tr>
-          <th>
-            <img src="resources/book1(2).jpg" id="pict2" width="100px" height="100px">
-          </th>
-          <th>
-            <img src="resources/book1(3).jpg" id="pict3" width="100px" height="100px">
-          </th>
-          <th>
-            <img src="resources/book1(4).jpg" id="pict4" width="100px" height="100px">
-          </th>
-        </tr>
-      </table>
-    </div>
+  <hr>
+  <br>
+  <div class="pictures" onclick="Increase();">
+    <table>
+      <tr>
+        <th>
+          <img src="resources/book1(1).jpg" id="pict1" width="auto" height="700px">
+        </th>
+      </tr>
+      <tr>
+        <th>
+          <img src="resources/book1(2).jpg" id="pict2" width="100px" height="100px">
+        </th>
+        <th>
+          <img src="resources/book1(3).jpg" id="pict3" width="100px" height="100px">
+        </th>
+        <th>
+          <img src="resources/book1(4).jpg" id="pict4" width="100px" height="100px">
+        </th>
+      </tr>
+    </table>
+  </div>
+  <aside>
     <fieldset class="desc">
       <div>
         <h2 id="bookTitle">
@@ -118,25 +119,27 @@
         </div>
       </div>
     </fieldset>
-    <div class="paymentForm" id="checkOutForm">
-      <div class="paymentForm-container">
-        <h2>
-          Select your payment method
-        </h2>
-        <button class="btn"
-          onclick="window.location.href='https://www.paypal.com/ca/digital-wallet/send-receive-money/paypal-me';">
-          <i class="fa fa-paypal" style="color:blue;"></i>
-          Paypal
-        </button>
-        <button class="btn" onclick="window.location.href='PaymentOpts.html';">
-          <i class="fa fa-credit-card" style="color:black;"></i>
-          Credit Card
-        </button>
-        <button class="btn cancel" onclick="checkOutCanceled();">
-          Cancel
-        </button>
-      </div>
+  </aside>
+
+  <div class="paymentForm" id="checkOutForm">
+    <div class="paymentForm-container">
+      <h2>
+        Select your payment method
+      </h2>
+      <button class="btn"
+        onclick="window.location.href='https://www.paypal.com/ca/digital-wallet/send-receive-money/paypal-me';">
+        <i class="fa fa-paypal" style="color:blue;"></i>
+        Paypal
+      </button>
+      <button class="btn" onclick="window.location.href='PaymentOpts.html';">
+        <i class="fa fa-credit-card" style="color:black;"></i>
+        Credit Card
+      </button>
+      <button class="btn cancel" onclick="checkOutCanceled();">
+        Cancel
+      </button>
     </div>
+  </div>
   <script src="cart.js"></script>
   <script src="script.js"></script>
   <hr>
