--- a/M.html
+++ b/M.html
@@ -45,92 +45,104 @@
     </div>
   </nav>
   <section>
-  <hr>
-  <br>
-  <div class="row">
-    <div class="column">
-      <img src="resources/book20(1).jpg" width="auto" height="400px" onclick="inlarge(this);">
-    </div>
-    <div class="column">
-      <img src="resources/book20(2).jpg" width="auto" height="400px" onclick="inlarge(this);">
-    </div>
-    <div class="column">
-      <img src="resources/book20(3).jpg" width="auto" height="400px" onclick="inlarge(this);">
-    </div>
-    <div class="column">
-      <img src="resources/book20(4).jpg" width="auto" height="400px" onclick="inlarge(this);">
-    </div>
-  </div>
-  <div class="container">
-    <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-    <img id="expandedImg" style="width:auto;height:0.1%;">
-    <div id="imgtext"></div>
-  </div>
-  <fieldset class="desc">
-    <div>
-      <h2 id="bookTitle">
-        Molecules: The Elements and the Architecture of Everything
-        <br>
-        $20.00
-      </h2>
-      <h3 id="bookAuther">
-        By: Theodore Gray
-      </h3>
-      <hr>
-      <p id="bookDescription">
-        Theodore Gray begins with an explanation of how atoms bond to form molecules and compounds, as well as the
-        difference between organic and inorganic chemistry.
-        He then goes on to explore the vast array of materials molecules can create, including: soaps and solvents;
-        goops and oils; rocks and ores; ropes and
-        fibers; painkillers and dangerous drugs; sweeteners; perfumes and stink bombs; colors and pigments; and
-        controversial compounds including asbestos,
-        CFCs, and thimerosal.
-        <br>
-        <br>
-        Big, gorgeous photographs, as well as diagrams of the compounds and their chemical bonds, rendered with never
-        before seen beauty,
-        fill the pages and capture molecules in their various states.
-        <br>
-        <br>
-        As he did in The Elements, Gray shows us molecules as we've never seen them before. It's the perfect book for
-        his loyal fans who've been eager
-        for more and for anyone fascinated with the mysteries of the material world.
-      </p>
-      <div id="payDeliver">
-        <button class="checkOutBtn"
-          onclick="localStorage.setItem('Molecules: The Elements and the Architecture of Everything', '1');alert('added to your cart');">
-          <b>
-            Add To Cart
-          </b>
+    <hr>
+    <br>
+    <table>
+      <tr>
+        <td>
+          <div class="row">
+            <div class="column">
+              <img src="resources/book20(1).jpg" width="auto" height="400px" onclick="inlarge(this);">
+            </div>
+            <div class="column">
+              <img src="resources/book20(2).jpg" width="auto" height="400px" onclick="inlarge(this);">
+            </div>
+            <div class="column">
+              <img src="resources/book20(3).jpg" width="auto" height="400px" onclick="inlarge(this);">
+            </div>
+            <div class="column">
+              <img src="resources/book20(4).jpg" width="auto" height="400px" onclick="inlarge(this);">
+            </div>
+          </div>
+          <div class="container">
+            <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
+            <img id="expandedImg" style="width:auto;height:0.1%;">
+            <div id="imgtext"></div>
+          </div>
+        </td>
+        <td>
+          <fieldset class="desc">
+            <div>
+              <h2 id="bookTitle">
+                Molecules: The Elements and the Architecture of Everything
+                <br>
+                $20.00
+              </h2>
+              <h3 id="bookAuther">
+                By: Theodore Gray
+              </h3>
+              <hr>
+              <p id="bookDescription">
+                Theodore Gray begins with an explanation of how atoms bond to form molecules and compounds, as well as
+                the
+                difference between organic and inorganic chemistry.
+                He then goes on to explore the vast array of materials molecules can create, including: soaps and
+                solvents;
+                goops and oils; rocks and ores; ropes and
+                fibers; painkillers and dangerous drugs; sweeteners; perfumes and stink bombs; colors and pigments; and
+                controversial compounds including asbestos,
+                CFCs, and thimerosal.
+                <br>
+                <br>
+                Big, gorgeous photographs, as well as diagrams of the compounds and their chemical bonds, rendered with
+                never
+                before seen beauty,
+                fill the pages and capture molecules in their various states.
+                <br>
+                <br>
+                As he did in The Elements, Gray shows us molecules as we've never seen them before. It's the perfect
+                book for
+                his loyal fans who've been eager
+                for more and for anyone fascinated with the mysteries of the material world.
+              </p>
+              <div id="payDeliver">
+                <button class="checkOutBtn"
+                  onclick="localStorage.setItem('Molecules: The Elements and the Architecture of Everything', '1');alert('added to your cart');">
+                  <b>
+                    Add To Cart
+                  </b>
+                </button>
+                <button class="buy-btn" onclick="checkOutClicked();">
+                  <b>
+                    Buy Now
+                  </b>
+                </button>
+              </div>
+            </div>
+          </fieldset>
+        </td>
+      </tr>
+    </table>
+    <div class="paymentForm" id="checkOutForm">
+      <div class="paymentForm-container">
+        <h2>
+          Select your payment method
+        </h2>
+        <button class="btn"
+          onclick="window.location.href='https://www.paypal.com/ca/digital-wallet/send-receive-money/paypal-me';">
+          <i class="fa fa-paypal" style="color:blue;"></i>
+          Paypal
         </button>
-        <button class="buy-btn" onclick="checkOutClicked();">
-          <b>
-            Buy Now
-          </b>
+        <button class="btn" onclick="window.location.href='PaymentOpts.html';">
+          <i class="fa fa-credit-card" style="color:black;"></i>
+          Credit Card
+        </button>
+        <button class="btn cancel" onclick="checkOutCanceled()">
+          Cancel
         </button>
       </div>
     </div>
-  </fieldset>
-  <div class="paymentForm" id="checkOutForm">
-    <div class="paymentForm-container">
-      <h2>
-        Select your payment method
-      </h2>
-      <button class="btn"
-        onclick="window.location.href='https://www.paypal.com/ca/digital-wallet/send-receive-money/paypal-me';">
-        <i class="fa fa-paypal" style="color:blue;"></i>
-        Paypal
-      </button>
-      <button class="btn" onclick="window.location.href='PaymentOpts.html';">
-        <i class="fa fa-credit-card" style="color:black;"></i>
-        Credit Card
-      </button>
-      <button class="btn cancel" onclick="checkOutCanceled()">
-        Cancel
-      </button>
-    </div>
-  </div>
-</section>
+  </section>
   <script src="cart.js"></script>
   <script src="script.js"></script>
   <hr>
