--- a/TWE.html
+++ b/TWE.html
@@ -47,78 +47,127 @@
   <section>
     <hr>
     <br>
-    <div class="pictures" onclick="Increase();">
-      <table>
-        <tr>
-          <th>
-            <img src="resources/book14(1).jpg" id="pict1" width="auto" height="700px">
-          </th>
-        </tr>
-        <tr>
-          <th>
-            <img src="resources/book14(2).jpg" id="pict2" width="100px" height="100px">
-          </th>
-          <th>
-            <img src="resources/book14(3).jpg" id="pict3" width="100px" height="100px">
-          </th>
-          <th>
-            <img src="resources/book14(4).jpg" id="pict4" width="100px" height="100px">
-          </th>
-        </tr>
-      </table>
-    </div>
-    <fieldset class="desc">
-      <div>
-        <h2 id="bookTitle">
-          The Wandering Earth
-          <br>
-          $20.00
-        </h2>
-        <h3 id="bookAuther">
-          By: Cixin Liu
-        </h3>
-        <hr>
-        <p id="bookDescription"></p>
-        <div id="payDeliver">
-          <button class="checkOutBtn"
-            onclick="localStorage.setItem('The Wandering Earth', '1');alert('added to your cart');">
-            <b>
-              Add To Cart
-            </b>
-          </button>
-          <button class="buy-btn" onclick="checkOutClicked();">
-            <b>
-              Buy Now
-            </b>
-          </button>
-        </div>
-      </div>
-    </fieldset>
-    <div class="paymentForm" id="checkOutForm">
-      <div class="paymentForm-container">
-        <h2>
-          Select your payment method
-        </h2>
-        <button class="btn"
-          onclick="window.location.href='https://www.paypal.com/ca/digital-wallet/send-receive-money/paypal-me';">
-          <i class="fa fa-paypal" style="color:blue;"></i>
-          Paypal
-        </button>
-        <button class="btn" onclick="window.location.href='PaymentOpts.html';">
-          <i class="fa fa-credit-card" style="color:black;"></i>
-          Credit Card
-        </button>
-        <button class="btn cancel" onclick="checkOutCanceled();">
-          Cancel
-        </button>
-      </div>
-    </div>
+    <table>
+      <tr>
+        <td>
+          <div class="pictures" onclick="Increase();">
+            <table>
+              <tr>
+                <th>
+                  <img src="resources/book14(1).jpg" id="pict1" width="auto" height="700px">
+                </th>
+              </tr>
+              <tr>
+                <th>
+                  <img src="resources/book14(2).jpg" id="pict2" width="100px" height="100px">
+                </th>
+                <th>
+                  <img src="resources/book14(3).jpg" id="pict3" width="100px" height="100px">
+                </th>
+                <th>
+                  <img src="resources/book14(4).jpg" id="pict4" width="100px" height="100px">
+                </th>
+              </tr>
+            </table>
+          </div>
+        </td>
+        <td>
+          <fieldset class="desc">
+            <div>
+              <h2 id="bookTitle">
+                The Wandering Earth
+                <br>
+                $20.00
+              </h2>
+              <h3 id="bookAuther">
+                By: Cixin Liu
+              </h3>
+              <hr>
+              <p id="bookDescription"></p>
+              <div id="payDeliver">
+                <button class="checkOutBtn"
+                  onclick="localStorage.setItem('The Wandering Earth', '1');alert('added to your cart');">
+                  <b>
+                    Add To Cart
+                  </b>
+                </button>
+                <button class="buy-btn" onclick="checkOutClicked();">
+                  <b>
+                    Buy Now
+                  </b>
+                </button>
+              </div>
+            </div>
+          </fieldset>
+          <div class="paymentForm" id="checkOutForm">
+            <div class="paymentForm-container">
+              <h2>
+                Select your payment method
+              </h2>
+              <button class="btn"
+                onclick="window.location.href='https://www.paypal.com/ca/digital-wallet/send-receive-money/paypal-me';">
+                <i class="fa fa-paypal" style="color:blue;"></i>
+                Paypal
+              </button>
+              <button class="btn" onclick="window.location.href='PaymentOpts.html';">
+                <i class="fa fa-credit-card" style="color:black;"></i>
+                Credit Card
+              </button>
+              <button class="btn cancel" onclick="checkOutCanceled();">
+                Cancel
+              </button>
+            </div>
+          </div>
+        </td>
+      </tr>
+    </table>
   </section>
   <script src="cart.js"></script>
   <script src="script.js"></script>
   <hr>
-  <footer>
-  </footer>
+  <table style="width:100%;">
+    <tr>
+      <td>
+        <footer>
+          <div style="margin-left:49%;">
+            <ul style="text-align:center;">
+              <li style="display:flex;">
+                <a href="questions.html" class="footerLink">
+                  <b>
+                    Frequently Asked Questions
+                  </b>
+                </a>
+              </li>
+              <li style="display:flex;">
+                <a href="contacts.html" class="footerLink">
+                  <b>
+                    Contacts
+                  </b>
+                </a>
+              </li>
+              <li style="display:flex;">
+                <a href="security.html" class="footerLink">
+                  <b>
+                    Security
+                  </b>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <br>
+          <br>
+          <h2>
+            <span style="color:blue;">
+              Sci
+            </span>
+            <span style="color:green;">
+              Books
+            </span>
+          </h2>
+        </footer>
+      </td>
+    </tr>
+  </table>
 </body>
 
 </html>
