--- a/HUTS.html
+++ b/HUTS.html
@@ -71,7 +71,7 @@
         </div>
       </td>
       <td>
-        
+
       </td>
     </tr>
   </table>
@@ -123,8 +123,49 @@
         </div>
       </div>
   <hr>
-  <footer>
-  </footer>
+  <table style="width:100%;">
+    <tr>
+      <td>
+        <footer>
+          <div style="margin-left:49%;">
+            <ul style="text-align:center;">
+              <li style="display:flex;">
+                <a href="questions.html" class="footerLink">
+                  <b>
+                    Frequently Asked Questions
+                  </b>
+                </a>
+              </li>
+              <li style="display:flex;">
+                <a href="contacts.html" class="footerLink">
+                  <b>
+                    Contacts
+                  </b>
+                </a>
+              </li>
+              <li style="display:flex;">
+                <a href="security.html" class="footerLink">
+                  <b>
+                    Security
+                  </b>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <br>
+          <br>
+          <h2>
+            <span style="color:blue;">
+              Sci
+            </span>
+            <span style="color:green;">
+              Books
+            </span>
+          </h2>
+        </footer>
+      </td>
+    </tr>
+  </table>
 </body>
 
 </html>
