--- a/TAM.html
+++ b/TAM.html
@@ -47,80 +47,88 @@
   <section>
     <hr>
     <br>
-    <div class="row">
-      <div class="column">
-        <img src="resources/book19(1).jpg" width="auto" height="100px" onclick="inlarge(this);">
-      </div>
-      <div class="column">
-        <img src="resources/book19(2).jpg" width="auto" height="100px" onclick="inlarge(this);">
-      </div>
-      <div class="column">
-        <img src="resources/book19(3).jpg" width="auto" height="100px" onclick="inlarge(this);">
-      </div>
-      <div class="column">
-        <img src="resources/book19(4).jpg" width="auto" height="100px" onclick="inlarge(this);">
-      </div>
-    </div>
-    <div class="container">
-      <span onclick="this.parentElement.style.display='none'" class="closebtn">
-        &times;
-      </span>
-      <img id="expandedImg" style="width:auto;height:700px;">
-      <div id="imgtext"></div>
-    </div>
-    <fieldset class="desc">
-      <div>
-        <h2 id="bookTitle">
-          The Apollo Murders
-          <br>
-          $25.00
-        </h2>
-        <h3 id="bookAuther">
-          By: Chris Hadfield
-        </h3>
-        <hr>
-        <p id="bookDescription">
-          1973. A final, top-secret mission to the Moon. Three astronauts in a tiny module, a quarter of a million miles
-          from home. A quarter of a million
-          miles from help.
-          <br>
-          <br>
-          As Russian and American crews sprint for a secret bounty hidden away on the lunar surface, old rivalries
-          blossom
-          and the political stakes
-          are stretched to the breaking point back on Earth. Houston flight controller Kazimieras "Kaz" Zemeckis must do
-          all he can to keep the NASA crew
-          together, while staying one step ahead of his Soviet rivals. But not everyone on board Apollo 18 is quite who
-          they appear to be.
-          <br>
-          <br>
-          Full of the fascinating technical detail that fans of The Martian loved, and reminiscent of the thrilling
-          claustrophobia,
-          twists and tension of The Hunt for Red October, The Apollo Murders puts you right there in the moment.
-          Experience the fierce G-forces of
-          launch, the frozen loneliness of Space and the fear of holding on to the outside of a spacecraft orbiting the
-          Earth at 17,000 miles per hour,
-          as told by a former Commander of the International Space Station who has done all of those things in real
-          life.
-          <br>
-          <br>
-          Strap in and count down for the ride of a lifetime.
-        </p>
-        <div id="payDeliver">
-          <button class="checkOutBtn"
-            onclick="localStorage.setItem('The Apolo Murders', '1');alert('added to your cart');">
-            <b>
-              Add To Cart
-            </b>
-          </button>
-          <button class="buy-btn" onclick="checkOutClicked();">
-            <b>
-              Buy Now
-            </b>
-          </button>
-        </div>
-      </div>
-    </fieldset>
+    <table>
+      <tr>
+        <td>
+          <div class="row">
+            <div class="column">
+              <img src="resources/book19(1).jpg" width="auto" height="100px" onclick="inlarge(this);">
+            </div>
+            <div class="column">
+              <img src="resources/book19(2).jpg" width="auto" height="100px" onclick="inlarge(this);">
+            </div>
+            <div class="column">
+              <img src="resources/book19(3).jpg" width="auto" height="100px" onclick="inlarge(this);">
+            </div>
+            <div class="column">
+              <img src="resources/book19(4).jpg" width="auto" height="100px" onclick="inlarge(this);">
+            </div>
+          </div>
+          <div class="container">
+            <span onclick="this.parentElement.style.display='none'" class="closebtn">
+              &times;
+            </span>
+            <img id="expandedImg" style="width:auto;height:700px;">
+            <div id="imgtext"></div>
+          </div>
+        </td>
+        <td>
+          <fieldset class="desc">
+            <div>
+              <h2 id="bookTitle">
+                The Apollo Murders
+                <br>
+                $25.00
+              </h2>
+              <h3 id="bookAuther">
+                By: Chris Hadfield
+              </h3>
+              <hr>
+              <p id="bookDescription">
+                1973. A final, top-secret mission to the Moon. Three astronauts in a tiny module, a quarter of a million miles
+                from home. A quarter of a million
+                miles from help.
+                <br>
+                <br>
+                As Russian and American crews sprint for a secret bounty hidden away on the lunar surface, old rivalries
+                blossom
+                and the political stakes
+                are stretched to the breaking point back on Earth. Houston flight controller Kazimieras "Kaz" Zemeckis must do
+                all he can to keep the NASA crew
+                together, while staying one step ahead of his Soviet rivals. But not everyone on board Apollo 18 is quite who
+                they appear to be.
+                <br>
+                <br>
+                Full of the fascinating technical detail that fans of The Martian loved, and reminiscent of the thrilling
+                claustrophobia,
+                twists and tension of The Hunt for Red October, The Apollo Murders puts you right there in the moment.
+                Experience the fierce G-forces of
+                launch, the frozen loneliness of Space and the fear of holding on to the outside of a spacecraft orbiting the
+                Earth at 17,000 miles per hour,
+                as told by a former Commander of the International Space Station who has done all of those things in real
+                life.
+                <br>
+                <br>
+                Strap in and count down for the ride of a lifetime.
+              </p>
+              <div id="payDeliver">
+                <button class="checkOutBtn"
+                  onclick="localStorage.setItem('The Apolo Murders', '1');alert('added to your cart');">
+                  <b>
+                    Add To Cart
+                  </b>
+                </button>
+                <button class="buy-btn" onclick="checkOutClicked();">
+                  <b>
+                    Buy Now
+                  </b>
+                </button>
+              </div>
+            </div>
+          </fieldset>
+        </td>
+      </tr>
+    </table>
     <div class="paymentForm" id="checkOutForm">
       <div class="paymentForm-container">
         <h2>
