--- a/TSSOS.html
+++ b/TSSOS.html
@@ -47,76 +47,84 @@
 <section>
   <hr>
   <br>
-  <div class="row">
-    <div class="column">
-      <img src="resources/book21(1).jpg" width="auto" height="400px" onclick="inlarge(this);">
-    </div>
-    <div class="column">
-      <img src="resources/book21(2).jpg" width="auto" height="400px" onclick="inlarge(this);">
-    </div>
-    <div class="column">
-      <img src="resources/book21(3).jpg" width="auto" height="400px" onclick="inlarge(this);">
-    </div>
-    <div class="column">
-      <img src="resources/book21(4).jpg" width="auto" height="400px" onclick="inlarge(this);">
-    </div>
-  </div>
-  <div class="container">
-    <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-    <img id="expandedImg" style="width:auto;height:0.1%;">
-    <div id="imgtext"></div>
-  </div>
-  <fieldset class="desc">
-    <div>
-      <h2 id="bookTitle">
-        To Sleep in a Sea Of Stars
-        <br>
-        $15.00
-      </h2>
-      <h3 id="bookAuther">
-        By: Christopher Paolini
-      </h3>
-      <hr>
-      <p id="bookDescription">
-        <b>
-          Kira Navárez dreamed of life on new worlds.
-        </b>
-        <br>
-        <br>
-        <b>
-          Now she's awakened a nightmare.
-        </b>
-        <br>
-        <br>
-        During a routine survey mission on an uncolonized planet, Kira finds an alien relic. At first she's delighted,
-        but elation
-        turns to terror when the ancient dust around her begins to move.
-        <br>
-        <br>
-        As war erupts among the stars, Kira is launched into a galaxy-spanning odyssey of discovery and transformation.
-        First contact isn't at all what she imagined, and events push her to the very limits of what it means to be
-        human.
-        <br>
-        <br>
-        While Kira faces her own horrors, Earth and its colonies stand upon the brink of annihilation. Now, Kira might
-        be humanity's
-        greatest and final hope . . .
-      </p>
-      <div id="payDeliver">
-        <button class="checkOutBtn"
-          onclick="localStorage.setItem('To Sleep in a Sea Of Stars', '1');alert('added to your cart');">
-          <b>
-            Add To Cart
-          </b>
-        </button>
-        <button class="buy-btn" onclick="checkOutClicked();">
-          <b>
-            Buy Now
-          </b>
-        </button>
-      </div>
-    </div>
-  </fieldset>
+  <table>
+    <tr>
+      <td>
+        <div class="row">
+          <div class="column">
+            <img src="resources/book21(1).jpg" width="auto" height="400px" onclick="inlarge(this);">
+          </div>
+          <div class="column">
+            <img src="resources/book21(2).jpg" width="auto" height="400px" onclick="inlarge(this);">
+          </div>
+          <div class="column">
+            <img src="resources/book21(3).jpg" width="auto" height="400px" onclick="inlarge(this);">
+          </div>
+          <div class="column">
+            <img src="resources/book21(4).jpg" width="auto" height="400px" onclick="inlarge(this);">
+          </div>
+        </div>
+        <div class="container">
+          <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
+          <img id="expandedImg" style="width:auto;height:0.1%;">
+          <div id="imgtext"></div>
+        </div>
+      </td>
+      <td>
+        <fieldset class="desc">
+          <div>
+            <h2 id="bookTitle">
+              To Sleep in a Sea Of Stars
+              <br>
+              $15.00
+            </h2>
+            <h3 id="bookAuther">
+              By: Christopher Paolini
+            </h3>
+            <hr>
+            <p id="bookDescription">
+              <b>
+                Kira Navárez dreamed of life on new worlds.
+              </b>
+              <br>
+              <br>
+              <b>
+                Now she's awakened a nightmare.
+              </b>
+              <br>
+              <br>
+              During a routine survey mission on an uncolonized planet, Kira finds an alien relic. At first she's delighted,
+              but elation
+              turns to terror when the ancient dust around her begins to move.
+              <br>
+              <br>
+              As war erupts among the stars, Kira is launched into a galaxy-spanning odyssey of discovery and transformation.
+              First contact isn't at all what she imagined, and events push her to the very limits of what it means to be
+              human.
+              <br>
+              <br>
+              While Kira faces her own horrors, Earth and its colonies stand upon the brink of annihilation. Now, Kira might
+              be humanity's
+              greatest and final hope . . .
+            </p>
+            <div id="payDeliver">
+              <button class="checkOutBtn"
+                onclick="localStorage.setItem('To Sleep in a Sea Of Stars', '1');alert('added to your cart');">
+                <b>
+                  Add To Cart
+                </b>
+              </button>
+              <button class="buy-btn" onclick="checkOutClicked();">
+                <b>
+                  Buy Now
+                </b>
+              </button>
+            </div>
+          </div>
+        </fieldset>
+      </td>
+    </tr>
+  </table>
   <div class="paymentForm" id="checkOutForm">
     <div class="paymentForm-container">
       <h2>
