--- a/YAH.html
+++ b/YAH.html
@@ -47,56 +47,63 @@
   <section>
     <hr>
     <br>
-    <div class="row">
-      <div class="column">
-        <img src="resources/book18(1).jpg" width="auto" height="400px" onclick="inlarge(this);">
-      </div>
-      <div class="column">
-        <img src="resources/book18(2).jpg" width="auto" height="400px" onclick="inlarge(this);">
-      </div>
-      <div class="column">
-        <img src="resources/book18(3).jpg" width="auto" height="400px" onclick="inlarge(this);">
-      </div>
-      <div class="column">
-        <img src="resources/book18(4).jpg" width="auto" height="400px" onclick="inlarge(this);">
-      </div>
-    </div>
+    <table>
+      <tr>
+        <td>
+          <div class="row">
+            <div class="column">
+              <img src="resources/book18(1).jpg" width="auto" height="400px" onclick="inlarge(this);">
+            </div>
+            <div class="column">
+              <img src="resources/book18(2).jpg" width="auto" height="400px" onclick="inlarge(this);">
+            </div>
+            <div class="column">
+              <img src="resources/book18(3).jpg" width="auto" height="400px" onclick="inlarge(this);">
+            </div>
+            <div class="column">
+              <img src="resources/book18(4).jpg" width="auto" height="400px" onclick="inlarge(this);">
+            </div>
+          </div>
+          <div class="container">
+            <span onclick="this.parentElement.style.display='none'" class="closebtn">
+              &times;
+            </span>
+            <img id="expandedImg" style="width:auto;height:800px;">
+          </div>
+        </td>
+        <td>
+          <fieldset class="desc">
+            <div>
+              <h2 id="bookTitle">
+                You Are Here: Around the World in 92 Minutes
+                <br>
+                $25.00
+              </h2>
+              <h3 id="bookAuther">
+                By: Chris Hadfield
+              </h3>
+              <hr>
+              <p id="bookDescription">
 
-    <div class="container">
-      <span onclick="this.parentElement.style.display='none'" class="closebtn">
-        &times;
-      </span>
-      <img id="expandedImg" style="width:auto;height:0.1%;">
-    </div>
-    <fieldset class="desc">
-      <div>
-        <h2 id="bookTitle">
-          You Are Here: Around the World in 92 Minutes
-          <br>
-          $25.00
-        </h2>
-        <h3 id="bookAuther">
-          By: Chris Hadfield
-        </h3>
-        <hr>
-        <p id="bookDescription">
-
-        </p>
-        <div id="payDeliver">
-          <button class="checkOutBtn"
-            onclick="localStorage.setItem('You Are Here: Around the World in 92 Minutes ', '1');alert('added to your cart');">
-            <b>
-              Add To Cart
-            </b>
-          </button>
-          <button class="buy-btn" onclick="checkOutClicked();">
-            <b>
-              Buy Now
-            </b>
-          </button>
-        </div>
-      </div>
-    </fieldset>
+              </p>
+              <div id="payDeliver">
+                <button class="checkOutBtn"
+                  onclick="localStorage.setItem('You Are Here: Around the World in 92 Minutes ', '1');alert('added to your cart');">
+                  <b>
+                    Add To Cart
+                  </b>
+                </button>
+                <button class="buy-btn" onclick="checkOutClicked();">
+                  <b>
+                    Buy Now
+                  </b>
+                </button>
+              </div>
+            </div>
+          </fieldset>
+        </td>
+      </tr>
+    </table>
     <div class="paymentForm" id="checkOutForm">
       <div class="paymentForm-container">
         <h2>
