--- a/M.html
+++ b/M.html
@@ -50,23 +50,25 @@
     <table>
       <tr>
         <td>
-          <div class="row">
-            <div class="column">
-              <img src="resources/book20(1).jpg" width="auto" height="400px" onclick="inlarge(this);">
-            </div>
-            <div class="column">
-              <img src="resources/book20(2).jpg" width="auto" height="400px" onclick="inlarge(this);">
-            </div>
-            <div class="column">
-              <img src="resources/book20(3).jpg" width="auto" height="400px" onclick="inlarge(this);">
-            </div>
-            <div class="column">
-              <img src="resources/book20(4).jpg" width="auto" height="400px" onclick="inlarge(this);">
-            </div>
-          </div>
+          <table>
+            <tr>
+              <td>
+                <img src="resources/book20(1).jpg" width="auto" height="1%" onclick="inlarge(this);">
+              </td>
+              <td>
+                <img src="resources/book20(2).jpg" width="auto" height="1%" onclick="inlarge(this);">
+              </td>
+              <td>
+                <img src="resources/book20(3).jpg" width="auto" height="1%" onclick="inlarge(this);">
+              </td>
+              <td>
+                <img src="resources/book20(4).jpg" width="auto" height="1%" onclick="inlarge(this);">
+              </td>
+            </tr>
+          </table>
           <div class="container">
             <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-            <img id="expandedImg" style="width:auto;height:10%;">
+            <img id="expandedImg" style="width:auto;height:2%;">
             <div id="imgtext"></div>
           </div>
         </td>
