--- a/M.html
+++ b/M.html
@@ -53,16 +53,16 @@
           <table>
             <tr>
               <td>
-                <img src="resources/book20(1).jpg" width="auto" height="1%" onclick="inlarge(this);">
+                <img src="resources/book20(1).jpg" width="auto" height="400px" onclick="inlarge(this);">
               </td>
               <td>
-                <img src="resources/book20(2).jpg" width="auto" height="1%" onclick="inlarge(this);">
+                <img src="resources/book20(2).jpg" width="auto" height="400px" onclick="inlarge(this);">
               </td>
               <td>
-                <img src="resources/book20(3).jpg" width="auto" height="1%" onclick="inlarge(this);">
+                <img src="resources/book20(3).jpg" width="auto" height="400px" onclick="inlarge(this);">
               </td>
               <td>
-                <img src="resources/book20(4).jpg" width="auto" height="1%" onclick="inlarge(this);">
+                <img src="resources/book20(4).jpg" width="auto" height="400px" onclick="inlarge(this);">
               </td>
             </tr>
           </table>
