--- a/YAH.html
+++ b/YAH.html
@@ -52,16 +52,16 @@
         <td>
           <div class="row">
             <div class="column">
-              <img src="resources/book18(1).jpg" width="auto" height="400px" onclick="inlarge(this);">
+              <img src="resources/book18(1).jpg" class="prevImg" onclick="inlarge(this);">
             </div>
             <div class="column">
-              <img src="resources/book18(2).jpg" width="auto" height="400px" onclick="inlarge(this);">
+              <img src="resources/book18(2).jpg" class="prevImg" onclick="inlarge(this);">
             </div>
             <div class="column">
-              <img src="resources/book18(3).jpg" width="auto" height="400px" onclick="inlarge(this);">
+              <img src="resources/book18(3).jpg" class="prevImg" onclick="inlarge(this);">
             </div>
             <div class="column">
-              <img src="resources/book18(4).jpg" width="auto" height="400px" onclick="inlarge(this);">
+              <img src="resources/book18(4).jpg" class="prevImg" onclick="inlarge(this);">
             </div>
           </div>
           <div class="container">
@@ -84,7 +84,15 @@
               </h3>
               <hr>
               <p id="bookDescription">
-
+                <b>
+                  A playful, thought-provoking and visually delightful photo tour of Earth from the astronaut who made us fall in love with our planet all over again...
+                </b>
+                <br>
+                <br>
+                The millions of us who followed Chris Hadfield's tweets from space thought we knew what we were looking at when we first saw his photos of Earth.
+                We definitely caught the beauty but we may have missed the full meaning. Now, with a collection of his favorite, never- before-shared images, Hadfield helps us see the big picture: why our planet looks the way it does and why we live where we do. Drawing on his in-depth knowledge of geology, geography and meteorology.
+                he takes us on a planetary photo tour-an idealized orbit of Earth-and explains the mysteries these stunning images reveal.
+                You Are Here opens a singular window on our planet, using remarkable photographs to illuminate the history and consequences of human settlement, the magnificence (and wit) of never-before- noticed landscapes, and the power of the natural forces shaping our world and the future of our species.
               </p>
               <div id="payDeliver">
                 <button class="checkOutBtn"
