--- a/AGL.html
+++ b/AGL.html
@@ -83,7 +83,22 @@
                 By: Chris Hadfield
               </h3>
               <hr>
-              <p id="bookDescription"></p>
+              <p id="bookDescription">
+                <b>
+                  As Commander of the International Space Station, Chris Hadfield captured our imagination. In his #1 internationally bestselling An Astronaut's Guide 
+                  to Life on Earth, he reveals how his impossible dream of becoming an astronaut came true.
+                </b>
+                <br>
+                <br>
+                When he was nine, Chris Hadfield watched the Apollo moon landing and knew what he wanted to be when he grew up: an astronaut. But Canadians couldn't 
+                even apply for the job. So how did he go on to become the first Canadian Commander of the International Space Station in 2013? Natural ability didn't 
+                hurt. But even more important was his commitment to "thinking like an astronaut."
+                Astronaut training turns conventional wisdom about success on its head. Astronauts always sweat the small stuff and they embrace the power of negative 
+                thinking-and yet the outcomes, both professionally and personally, are resoundingly positive. Hadfield illustrates these counterintuitive concepts 
+                with dramatic and entertaining anecdotes about being blinded during a spacewalk, getting rid of a live snake while flying a plane, and commanding a 
+                space ship while its lifeblood leaks into space. An Astronaut's Guide to Life on Earth isn't just the inspiring story of one man's journey to the ISS. 
+                It's an opportunity to step into his space-boots and learn to think like an astronaut-and figure out how to make your own dreams come true.
+              </p>
               <div id="payDeliver">
                 <button class="checkOutBtn"
                   onclick="localStorage.setItem('An astronauts guide to life', '1');alert('added to your cart');">
