--- a/APH.html
+++ b/APH.html
@@ -83,7 +83,19 @@
                 By: Neil DeGrasse Tyson
               </h3>
               <hr>
-              <p id="bookDescription"></p>
+              <p id="bookDescription">
+                <b>
+                  The essential universe, from our most celebrated and beloved astrophysicist.
+                </b>
+                <br>
+                <br>
+                What is the nature of space and time? How do we fit within the universe? How does the uni- verse fit within us? There's no better guide through these 
+                mind-expanding questions than acclaimed astrophysicist and best-selling author Neil deGrasse Tyson. But today, few of us have time to contemplate the 
+                cosmos. So Tyson brings the universe down to Earth succinctly and clearly, with sparkling wit, in tasty chapters consumable anytime and any- where in 
+                your busy day. While you wait for your morning coffee to brew, for the bus, the train, or a plane to arrive, Astrophysics for People in a Hurry will 
+                reveal just what you need to be fluent and ready for the next cosmic headlines: from the Big Bang to black holes, from quarks to quantum 
+                mechanics, and from the search for planets to the search for life in the universe.
+              </p>
               <div id="payDeliver">
                 <button class="checkOutBtn"
                   onclick="localStorage.setItem('Astrophysics for people in a hurry', '1');alert('added to your cart');">
