--- a/O.html
+++ b/O.html
@@ -83,7 +83,12 @@
                 By: Neil DeGrasse Tyson & Donald Goldsmith
               </h3>
               <hr>
-              <p id="bookDescription"></p>
+              <p id="bookDescription">
+                Our true origins are not just human, or even terrestrial, but in fact cosmic. Drawing on recent scientific breakthroughs and the current 
+                cross-pollination among geology, biology, astrophysics, and cos- mology, Origins explains the soul-stirring leaps in our understanding of the cosmos. 
+                From the first image of a galaxy birth to Spirit Rover's exploration of Mars, to the discovery of water on one of Jupiter's moons, coauthors 
+                Neil deGrasse Tyson and Donald Goldsmith conduct a galvanizing tour of the cosmos with clarity and exuberance.
+              </p>
               <div id="payDeliver">
                 <button class="checkOutBtn" onclick="localStorage.setItem('Origins', '1');alert('added to your cart');">
                   <b>
