--- a/security.html
+++ b/security.html
@@ -35,7 +35,7 @@
           <div class="menu fa fa-home" onclick="window.location.href='index.html';">
             Home
           </div>
-          <div class="menu fa fa-search">
+          <div class="menu fa fa-search" onclick="window.location.href='sorter.html';">
             Lookup
           </div>
           <div class="menu fa fa-shopping-cart" onclick="window.location.href='Cart.html';">
