--- a/TWE.html
+++ b/TWE.html
@@ -83,7 +83,12 @@
                 By: Cixin Liu
               </h3>
               <hr>
-              <p id="bookDescription"></p>
+              <p id="bookDescription">
+                Here is the first collection of his short fiction: these stories, including five Chinese Galaxy Award-winners, form a blazingly original ode to planet 
+                Earth - its pasts and its futures.
+                Liu's stories take the reader, to the edge of the universe to meet stranger fates than we could have ever imagined. With a melancholic and keen 
+                understanding of human nature, Liu explores humanity's attempts to reason, navigate and, above all, survive in an often desolate cosmos.
+              </p>
               <div id="payDeliver">
                 <button class="checkOutBtn"
                   onclick="localStorage.setItem('The Wandering Earth', '1');alert('added to your cart');">
