--- a/TWE.html
+++ b/TWE.html
@@ -50,13 +50,15 @@
     <table>
       <tr>
         <td>
+          <table>
+            <tr>
+              <td>
+                <img src="resources/book14(1).jpg" id="pict1" width="auto" height="700px">
+              </td>
+            </tr>
+          </table>
           <div class="pictures" onclick="Increase();">
             <table>
-              <tr>
-                <th>
-                  <img src="resources/book14(1).jpg" id="pict1" width="auto" height="700px">
-                </th>
-              </tr>
               <tr>
                 <th>
                   <img src="resources/book14(2).jpg" id="pict2" width="100px" height="100px">
