--- a/HUTS.html
+++ b/HUTS.html
@@ -49,24 +49,27 @@
   <table>
     <tr>
       <td>
-        <div class="row">
-          <div class="column">
-            <img src="resources/book13(1).jpg" width="auto" height="400px" onclick="inlarge(this);">
-          </div>
-          <div class="column">
-            <img src="resources/book13(2).jpg" width="auto" height="400px" onclick="inlarge(this);">
-          </div>
-          <div class="column">
-            <img src="resources/book13(3).jpg" width="auto" height="400px" onclick="inlarge(this);">
-          </div>
-          <div class="column">
-            <img src="resources/book13(4).jpg" width="auto" height="400px" onclick="inlarge(this);">
-          </div>
-        </div>
-        <div class="container">
-          <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-          <img id="expandedImg" style="width:auto;height:10%;">
-          <div id="imgtext"></div>
+        <table>
+          <tr>
+            <td>
+              <img src="resources/book14(1).jpg" id="pict1" width="auto" height="700px">
+            </td>
+          </tr>
+        </table>
+        <div class="pictures" onclick="Increase();">
+          <table>
+            <tr>
+              <th>
+                <img src="resources/book14(2).jpg" id="pict2" width="100px" height="100px">
+              </th>
+              <th>
+                <img src="resources/book14(3).jpg" id="pict3" width="100px" height="100px">
+              </th>
+              <th>
+                <img src="resources/book14(4).jpg" id="pict4" width="100px" height="100px">
+              </th>
+            </tr>
+          </table>
         </div>
       </td>
       <td>
