--- a/OOT.html
+++ b/OOT.html
@@ -50,22 +50,24 @@
     <table>
       <tr>
         <td>
+          <table>
+            <tr>
+              <td>
+                <img src="resources/book14(1).jpg" id="pict1" width="auto" height="700px">
+              </td>
+            </tr>
+          </table>
           <div class="pictures" onclick="Increase();">
             <table>
               <tr>
                 <th>
-                  <img src="resources/book2(1).jpg" id="pict1" width="auto" height="700px">
-                </th>
-              </tr>
-              <tr>
-                <th>
-                  <img src="resources/book2(2).jpg" id="pict2" width="100px" height="100px">
+                  <img src="resources/book14(2).jpg" id="pict2" width="100px" height="100px">
                 </th>
                 <th>
-                  <img src="resources/book2(3).jpg" id="pict3" width="100px" height="100px">
+                  <img src="resources/book14(3).jpg" id="pict3" width="100px" height="100px">
                 </th>
                 <th>
-                  <img src="resources/book2(4).jpg" id="pict4" width="100px" height="100px">
+                  <img src="resources/book14(4).jpg" id="pict4" width="100px" height="100px">
                 </th>
               </tr>
             </table>
