--- a/YAH.html
+++ b/YAH.html
@@ -50,25 +50,27 @@
     <table>
       <tr>
         <td>
-          <div class="row">
-            <div class="column">
-              <img src="resources/book18(1).jpg" class="prevImg" onclick="inlarge(this);">
-            </div>
-            <div class="column">
-              <img src="resources/book18(2).jpg" class="prevImg" onclick="inlarge(this);">
-            </div>
-            <div class="column">
-              <img src="resources/book18(3).jpg" class="prevImg" onclick="inlarge(this);">
-            </div>
-            <div class="column">
-              <img src="resources/book18(4).jpg" class="prevImg" onclick="inlarge(this);">
-            </div>
-          </div>
-          <div class="container">
-            <span onclick="this.parentElement.style.display='none'" class="closebtn">
-              &times;
-            </span>
-            <img id="expandedImg" style="width:auto;height:800px;">
+          <table>
+            <tr>
+              <td>
+                <img src="resources/book14(1).jpg" id="pict1" width="auto" height="700px">
+              </td>
+            </tr>
+          </table>
+          <div class="pictures" onclick="Increase();">
+            <table>
+              <tr>
+                <th>
+                  <img src="resources/book14(2).jpg" id="pict2" width="100px" height="100px">
+                </th>
+                <th>
+                  <img src="resources/book14(3).jpg" id="pict3" width="100px" height="100px">
+                </th>
+                <th>
+                  <img src="resources/book14(4).jpg" id="pict4" width="100px" height="100px">
+                </th>
+              </tr>
+            </table>
           </div>
         </td>
         <td>
