--- a/security.html
+++ b/security.html
@@ -53,6 +53,20 @@
             with us.
           </b>
         </h1>
+        <br>
+        <h2 style="text-align:center;text-decoration:underline;">
+          Why?
+        </h2>
+        <br>
+        <ul>
+          <li>
+            We use 
+            <b>
+              TLS encryption 
+            </b>
+            to encrypt all of your sensitive data.
+          </li>
+        </ul>
         <footer>
           <div style="margin-left:49%;">
             <ul style="text-align:center;">
