--- a/security.html
+++ b/security.html
@@ -58,13 +58,20 @@
           Why?
         </h2>
         <br>
-        <ul>
+        <ul style="text-align:center;">
           <li>
             We use 
             <b>
               TLS encryption 
             </b>
             to encrypt all of your sensitive data.
+          </li>
+          <li>
+            We use 
+            <b>
+              Two-Factor Authentication
+            </b>
+            for all users before purchasing any books.
           </li>
         </ul>
         <footer>
