--- a/security.html
+++ b/security.html
@@ -58,7 +58,7 @@
           Why?
         </h2>
         <br>
-        <ul style="text-align:center;">
+        <ul style="text-align:center;display:block;">
           <li>
             We use 
             <b>
