--- a/questions.html
+++ b/questions.html
@@ -51,7 +51,7 @@
     </button>
     <div class="content">
       <p>
-        hello world
+        Just email us that you want to return or exchange a book that you bought from us and we'll e-transfer you your money back.
       </p>
     </div>
     <button class="collapsible">
@@ -59,7 +59,7 @@
     </button>
     <div class="content">
       <p>
-        hello world
+        You use Fedex and canada post to ship it to your location.
       </p>
     </div>
     <button class="collapsible">
@@ -74,9 +74,17 @@
       What are our policies?
     </button>
     <div class="content">
-      <p>
-        hello world
-      </p>
+      <ul>
+        <li>
+          You can not buy over 10 of the same books at a time.
+        </li>
+        <li>
+          You can only return books when you have proof of you purchase.
+        </li>
+        <li>
+          You can only exchange a book when you book has been damaged.
+        </li>
+      </ul>
     </div>
     <button class="collapsible">
       What Payment options do we accept?
