--- a/questions.html
+++ b/questions.html
@@ -51,7 +51,7 @@
     </button>
     <div class="content">
       <p>
-        Just email us that you want to return or exchange a book that you bought from us and we'll e-transfer you your money back.
+        Just email us that you want to return or exchange a book that you bought from us and we'll E-transfer you your money back.
       </p>
     </div>
     <button class="collapsible">
