--- a/sorter.html
+++ b/sorter.html
@@ -187,6 +187,16 @@
             <label for="GL">
               Gregory Benford & Larry Niven
             </label>
+            <br>
+            <input type="radio" name="Authors" id="TG" value="TG" class="rad">
+            <lable for="TG">
+              Theodore Gray
+            </lable>
+            <br>
+            <input type="radio" name="Authors" id="CP" value="CP" class="rad">
+            <lable for="CP">
+              Christopher Paolini
+            </lable>
           </fieldset>
           <br>
           <fieldset style="padding:5px 5px 5px 5px;">
