--- a/AGL.html
+++ b/AGL.html
@@ -61,7 +61,7 @@
             <table>
               <tr>
                 <th>
-                  <img src="resources/book5(2).jpg" id="pict2" width="100px" height="100px">
+                  <img src="resources/book5(2).jpg" id="pict2" width="100px" height="100px" onclick="change();">
                 </th>
                 <th>
                   <img src="resources/book5(3).jpg" id="pict3" width="100px" height="100px">
