--- a/AGL.html
+++ b/AGL.html
@@ -57,7 +57,7 @@
               </td>
             </tr>
           </table>
-          <div class="pictures" onclick="Increase();">
+          <div class="pictures">
             <table>
               <tr>
                 <th>
