--- a/AGL.html
+++ b/AGL.html
@@ -64,7 +64,7 @@
                   <img src="resources/book5(2).jpg" id="pict2" width="100px" height="100px" onclick="change(pict1, pict2);">
                 </th>
                 <th>
-                  <img src="resources/book5(3).jpg" id="pict3" width="100px" height="100px" onclick="change(pict1, pick3);">
+                  <img src="resources/book5(3).jpg" id="pict3" width="100px" height="100px" onclick="change(pict1, pict3);">
                 </th>
                 <th>
                   <img src="resources/book5(4).jpg" id="pict4" width="100px" height="100px" onclick="change(pict1, pict4);">
