--- a/APH.html
+++ b/APH.html
@@ -57,7 +57,7 @@
               </td>
             </tr>
           </table>
-          <div class="pictures"">
+          <div class="pictures">
             <table>
               <tr>
                 <th>
