--- a/BL.html
+++ b/BL.html
@@ -57,17 +57,17 @@
               </td>
             </tr>
           </table>
-          <div class="pictures" onclick="Increase();">
+          <div class="pictures">
             <table>
               <tr>
                 <th>
-                  <img src="resources/book12(2).jpg" id="pict2" width="100px" height="100px">
+                  <img src="resources/book12(2).jpg" id="pict2" width="100px" height="100px" onclick="change(pict1, pict2);">
                 </th>
                 <th>
-                  <img src="resources/book12(3).jpg" id="pict3" width="100px" height="100px">
+                  <img src="resources/book12(3).jpg" id="pict3" width="100px" height="100px" onclick="change(pict1, pict3);">
                 </th>
                 <th>
-                  <img src="resources/book12(4).jpg" id="pict4" width="100px" height="100px">
+                  <img src="resources/book12(4).jpg" id="pict4" width="100px" height="100px" onclick="change(pict1, pict4);">
                 </th>
               </tr>
             </table>
