--- a/HUTS.html
+++ b/HUTS.html
@@ -60,13 +60,13 @@
           <table>
             <tr>
               <th>
-                <img src="resources/book13(2).jpg" id="pict2" width="100px" height="100px">
+                <img src="resources/book13(2).jpg" id="pict2" width="100px" height="100px" onclick="change(pict1, pict2);">
               </th>
               <th>
-                <img src="resources/book13(3).jpg" id="pict3" width="100px" height="100px">
+                <img src="resources/book13(3).jpg" id="pict3" width="100px" height="100px" onclick="chage(pict1, pict3);">
               </th>
               <th>
-                <img src="resources/book13(4).jpg" id="pict4" width="100px" height="100px">
+                <img src="resources/book13(4).jpg" id="pict4" width="100px" height="100px" onclick="change(pict1, pict4);">
               </th>
             </tr>
           </table>
