--- a/HUTS.html
+++ b/HUTS.html
@@ -56,7 +56,7 @@
             </td>
           </tr>
         </table>
-        <div class="pictures" onclick="Increase();">
+        <div class="pictures">
           <table>
             <tr>
               <th>
