--- a/security.html
+++ b/security.html
@@ -72,6 +72,16 @@
             </b>
             for all users before purchasing any books.
           </li>
+            <li>
+                <b>
+                    All
+                </b>
+                the data we collect about you will 
+                <b>
+                    not
+                </b>
+                be sold for any reason.
+            </li>
         </ul>
         <br>
         <footer>
