--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                   Learn how to code
                 </h2>
                 <div>
-                  <img src="resources/book9(1).jpg" onclick="window.location.href='csPage.html';">
+                  <img src="resources/book9(1).jpg" onclick="window.location.href='csPage.html';" width="200px" height="200px">
                   <p>
                     Computer Science books
                   </p>
@@ -166,12 +166,6 @@
         New:
       </span>
     </h2>
-    <span class="ribbon" style="left:11%;top:53%;">
-      New
-    </span>
-    <span class="ribbon" style="left:25%;top:53%;">
-      New
-    </span>
     <table>
       <tr>
         <th onclick="window.location.href='HUTS.html';">
