--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
     </nav>
     <hr>
-    <table style="padding:5px;">
+    <table style="padding:5px;width:100%;">
       <tr>
           <td style="background-color:blue;padding:5px">
             <h2>
@@ -62,9 +62,18 @@
           <table style="padding:5px;">
             <tr>
               <td style="background-color:red;padding:5px;">
+                <h2>
+                  Learn some Astrophysics
+                </h2>
+                <div>
+                  <img src="resources/book4(1).jpg" onclick="window.location.href='science.html';" width="100px" height="100px">
+                  <p>
+                    Science
+                  </p>
+                </div>
               </td>
               <td style="background-color:green;padding:5px;">
-                hello
+                
               </td>
             </tr>
             <tr>
