--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     <table style="padding:5px;width:100%;">
       <tr>
           <td style="padding:5px">
-            <h2>
+            <h3 class="underine">
               Learn how to code
-            </h2>
+            </h3>
             <div>
             <img src="resources/book9(1).jpg" onclick="window.location.href='csPage.html';" width="200px" height="200px">
               <p>
@@ -62,9 +62,9 @@
           <table style="padding:5px;">
             <tr>
               <td style="padding:5px;">
-                <h2>
+                <h3 class="underline">
                   Learn some Astrophysics
-                </h2>
+                </h3>
                 <div>
                   <img src="resources/book4(1).jpg" onclick="window.location.href='sciPage.html';" width="100px" height="100px">
                   <p>
@@ -73,9 +73,9 @@
                 </div>
               </td>
               <td style="padding:5px;">
-                <h2>
+                <h3 class="underline">
                   Quick Reads
-                </h2>
+                </h3>
                 <div>
                   <img src="resources/book13(1).jpg" onclick="window.location.href='ssPange';" width="100px" height="100px">
                   <p>
@@ -86,9 +86,9 @@
             </tr>
             <tr>
               <td style="padding:5px;">
-                <h2>
+                <h3 class="underline">
                   Space
-                </h2>
+                </h3>
                 <div>
                   <img src="resources/book17(1).jpg" onclick="window.location.href='spPage.html';" width="100px" height="100px">
                   <p>
@@ -97,9 +97,9 @@
                 </div>
               </td>
               <td style="padding:5px;">
-                <h2>
+                <h3 class="underline">
                   Uncertainty
-                </h2>
+                </h3>
                 <div>
                   <img src="resources/book10(1).jpg" onclick="window.location.href='uPage.html';" width="100px" height="100px">
                   <p>
